@@ -1,3 +1,11 @@
+2024-05-13  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-intro.el: add variants - that end in "hsubs", and that point
+	to subtitles in HTML - to many links to videos.
+
+	* eev-videolinks.el (ee-1stclassvideos-info): indicate that the
+	video "eevfherel" - or "2020-find-here-links" now has subtitles.
+
 2024-05-12  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-blinks.el (ee-buffer-local-variables): use
